@@ -1,7 +1,7 @@
 /***********************************************************************
 Visualizer - Test application for the new visualization component
 framework.
-Copyright (c) 2005-2012 Oliver Kreylos
+Copyright (c) 2005-2013 Oliver Kreylos
 
 This file is part of the 3D Data Visualizer (Visualizer).
 
@@ -56,12 +56,13 @@ Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA 02111-1307 USA
 #include <GLMotif/TextField.h>
 #include <GLMotif/Button.h>
 #include <GLMotif/CascadeButton.h>
+#include <SceneGraph/GLRenderState.h>
 #include <SceneGraph/NodeCreator.h>
 #include <SceneGraph/VRMLFile.h>
-#include <SceneGraph/GLRenderState.h>
 #include <Vrui/Vrui.h>
 #include <Vrui/CoordinateManager.h>
 #include <Vrui/OpenFile.h>
+#include <Vrui/SceneGraphSupport.h>
 #ifdef VISUALIZER_USE_COLLABORATION
 #include <Collaboration/CollaborationClient.h>
 #endif
@@ -1101,15 +1102,22 @@ void Visualizer::display(GLContextData& contextData) const
 		/* Save OpenGL state: */
 		glPushAttrib(GL_ENABLE_BIT|GL_LIGHTING_BIT|GL_TEXTURE_BIT);
 		
-		/* Create a render state to traverse the scene graph: */
-		SceneGraph::GLRenderState renderState(contextData,Vrui::getHeadPosition(),Vrui::getInverseNavigationTransformation().transform(Vrui::getUpDirection()));
+		/* Save the modelview matrix: */
+		renderState.setMatrixMode(1);
+		glPushMatrix();
+		
+		/* Create a render state to traverse the scene graphs: */
+		SceneGraph::GLRenderState* sgRenderState=Vrui::createRenderState(true,contextData);
 		
 		/* Render all additional scene graphs: */
 		for(std::vector<SG>::const_iterator sgIt=sceneGraphs.begin();sgIt!=sceneGraphs.end();++sgIt)
 			if(sgIt->render)
-				sgIt->root->glRenderAction(renderState);
+				sgIt->root->glRenderAction(*sgRenderState);
+		
+		delete sgRenderState;
 		
 		/* Restore OpenGL state: */
+		glPopMatrix();
 		glPopAttrib();
 		}
 	
